--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -6,5 +6,6 @@
   </div>
 
 
-
 <% end %>
+
+<%= will_paginate @places, renderer: BootstrapPagination::Rails, previous_label: "Older", next_label: "Newer", inner_window: 1, outer_window: 0 %> 
