--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -56,3 +56,12 @@
     
   </div>
 </div>
+<!-- Clear div above form lets CSS know its not supposed to fill in blank space to the right of the last element -->
+<div class="clear"></div>
+
+<!--Form for comments -->
+<%= simple_form_for @comment, url: '#' do |f| %>
+  <%= f.input :message %>
+  <%= f.input :rating %>
+  <%= f.submit "Add a Comment", class: 'btn btn-primary' %>
+<% end %>
