--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -60,7 +60,7 @@
 <div class="clear"></div>
 
 <!--Form for comments -->
-<%= simple_form_for @comment, url: '#' do |f| %>
+<%= simple_form_for @comment, url: place_comments_path(@place) do |f| %>
   <%= f.input :message %>
   <%= f.input :rating %>
   <%= f.submit "Add a Comment", class: 'btn btn-primary' %>
