--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -59,10 +59,7 @@
 <!-- Clear div above form lets CSS know its not supposed to fill in blank space to the right of the last element -->
 <div class="clear"></div>
 
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-  Add a comment
-</button>
+
 
 <!-- Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -81,7 +78,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <%= f.submit "Add a Comment", class: 'btn btn-primary' %>
+          <%= f.submit "Add a Comment", class: 'btn btn-primary' %> 
         </div>
       <% end %>
     </div>
@@ -89,10 +86,18 @@
 </div>
 
 <!-- Code for Comments to show -->
-<h1>Comments</h1>
+<div class="col-10 offset-1">
+<h1 class="float-left">Comments</h1>
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary btn-lg float-right" data-toggle="modal" data-target="#myModal">
+  Add a comment
+</button>
+</div>
 
+<div class="clear"></div>
+<div class="row">
 <% @place.comments.each do |comment| %>
-  <div>
+  <div class="col-12 col-sm-6">
     <blockquote>
       <% if comment.humanized_rating.present? %>
         <b><%= comment.humanized_rating %></b> -
@@ -102,3 +107,4 @@
     </blockquote>
   </div>
 <% end %>
+</div>
