--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -128,7 +128,13 @@
 
 
 
+<div class="clear"></div>
+<div class="row">
+<% @place.photos.each do |photo| %>
+  <div class="col-12 col-sm-6">
+    <%= image_tag photo.picture.url %>
 
-
+  </div>
+<% end %>
 
 
