--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -132,9 +132,14 @@
 <div class="row">
 <% @place.photos.each do |photo| %>
   <div class="col-12 col-sm-6">
-    <%= image_tag photo.picture.url %>
+    <% if photo.picture.present? %>
+    <%= image_tag photo.picture.url style: 'width: 10%; height: 10%' %>
+    <% end %>
+    
+    <small><%= photo.caption %></small>
 
   </div>
-<% end %>
+  <% end %>
+
 
 
