--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -16,7 +16,7 @@
       <% end %>
       <%= place.comments.last.message %>
       <small><%= place.comments.last.user.email %></small>
-      <%= image_tag place.photos.first.picture.url %>
+      <%= image_tag photo.picture.url %>
       <b><%= photo.caption %> </b> -
       </blockquote>
     </div>
