--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -16,12 +16,22 @@
       <% end %>
       <%= place.comments.last.message %>
       <small><%= place.comments.last.user.email %></small>
-      <%= image_tag photo.picture.url %>
-      <b><%= photo.caption %> </b> -
       </blockquote>
     </div>
-  <% end %>
+    <div class="col-12 col-sm-6">
+    <blockquote>
+      <% if place.photos.present? %>
+        <b><%= image_tag place.photos.first.picture.url %></b> -
+      <% end %>
+      <%= place.photos.first.caption %>
+      
+    </blockquote>
+      </div>
+    <% end %>
+    </div>
   </div>
 <% end %>
+
+
 
 <%= will_paginate @places, renderer: BootstrapPagination::Rails, previous_label: "Older", next_label: "Newer", inner_window: 1, outer_window: 0 %> 
