--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -111,7 +111,7 @@
 </div>
 
 
-
+<!-- 
      <%= simple_form_for @photo, url: place_photos_path(@place) do |f| %>
         <div class="modal-body">
           <%= f.input :caption %>
@@ -139,7 +139,57 @@
     <small><%= photo.caption %></small>
 
   </div>
-  <% end %>
+  <% end %> -->
 
+
+
+  <!-- Modal for Pictures -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">×</span>
+        </button>
+        <h4 class="modal-title" id="myModalLabel">Add a Photo</h4>
+      </div>
+     <%= simple_form_for @photo, url: place_photos_path(@place) do |f| %>
+        <div class="modal-body">
+          <%= f.input :caption %>
+          <%= f.input :picture %>
+        </div>
+
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <%= f.submit "Add a Photo", class: 'btn btn-primary' %> 
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
+
+<!-- Code for Photos to show -->
+<div class="col-10 offset-1">
+<h1 class="float-left">Photos</h1>
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary btn-lg float-right" data-toggle="modal" data-target="#myModal">
+  Add a Photo
+</button>
+</div>
+
+<div class="clear"></div>
+<div class="row">
+<% @place.photos.each do |photo| %>
+  <div class="col-12 col-sm-6">
+    <blockquote>
+      <% if photo.picture.present? %>
+        <b><%= image_tag photo.picture.url %></b> -
+      <% end %>
+      <%= photo.caption %>
+      
+    </blockquote>
+  </div>
+<% end %>
+</div>
 
 
