--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -83,3 +83,11 @@ img {
   margin-top: 30px;
   margin-bottom: 10px;
 }
+
+#carouselExampleIndicators {
+  margin-top: 20px;
+  margin-left: 20px;
+}
+.carousel-caption {
+  color: black;
+}
