styling the slider

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -28,6 +28,7 @@ body {
 .navbar {
   background: image_url('memphis-mini-dark.png');
   box-shadow: 0px 1px 3px #2a2a2a;
+   margin-bottom: 0;
 
 }
 
@@ -35,6 +36,7 @@ body {
   color: #48A76F;
   font-family: 'kaushan_scriptregular', sans-serif;
   font-size: 26px;
+  margin-bottom: 0;
   
 }
 
@@ -89,5 +91,27 @@ img {
   margin-left: 20px;
 }
 .carousel-caption {
-  color: black;
+    font-family: 'Helvetica Neue', Helvetica, sans-serif;
+    font-size: 60px;
+    font-weight: 100;
+    text-shadow: rgba(0, 0, 0, 0.95) 2px 2px;
+    background-color: rgba(0, 0, 0, 0.5);
+    width: 100%;
+    position: absolute;
+    left: 0;
+}
+
+.carousel {
+  box-shadow: 0px 3px 8px #2a2a2a;
+}
+
+.carousel-inner > .carousel-item > img, .carousel-inner > .carousel-item > a > img {
+  max-height: 550px;
+  width: 100%;
+}
+
+.carousel-item.active, 
+.carousel-item-next, 
+.carousel-item-prev {
+  display: block;
 }
